@@ -2,7 +2,7 @@
 
 	Fixes all over the tree.
 
-	Updated/fixed packages: hal, mplayer,
+	Updated/fixed packages: hal, mplayer, pciutils,
 	xdriver_xf86-video-openchrome, usb_modeswitch, usbutils
 
 	Issues resolved (http://bugs.uclibc.org):
@@ -10,6 +10,7 @@
 	#985: Bump usb_modeswitch package to 1.1.0
 	#1525: Package hal deletes a whole <target>/etc/rc.d directory
 	#1699: Fix usbutils dependencies and bump
+	#1705: Fix pciutils broken cross compiling
 
 2010.05-rc1, Released May 3rd, 2010:
 
